# packwright

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  README.zh-CN.md  SECURITY.md  pyproject.toml  release-artifacts.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: adapter_request.yml  bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  pages.yml  release.yml
assets/: tokens.css
docs/: AGENT_ARCHETYPES.md  CHARACTER_DRAFTING.md  CLI.md  CODEX_CHARACTER_WORKFLOW.md  EMOTION_ENGINE.md  IMPLEMENTATION_PLAN_2026-07-16.md  PI.md  RUNTIME_AUTOMATIONS.md  USE_WITH_YOUR_AGENT.md
docs/releases/: 0.1.0.md  0.1.0rc1.md  0.1.1.md  0.1.2.md  0.2.0.md  0.3.0.md
examples/: character_intake.relationship.yaml  character_intake.yaml
examples/atlas-work/emotion/: memory-events.yaml  model.yaml  state-schema.yaml  update-policy.yaml
examples/atlas-work/identity/: persona.md  relationship.md  voice.md
examples/atlas-work/mechanism/: context-loading.yaml  memory-policy.yaml  session-guards.yaml
examples/atlas-work/memory/: collaboration.md  knowledge_map.md  profile.md  session-index.md  todos.md  workstreams.md
examples/atlas-work/operating/: boundaries.md
examples/atlas-work/projection/: ownership-contract.yaml
scripts/: audit_public_tree.py  audit_zero_network.py  release-gate.sh
site/: demo.js  index.html  zh-CN.html
specs/reserved/: emotion-engine.yaml  runtime-surface.yaml
src/packwright/: __init__.py  cli.py
src/packwright/adapters/: __init__.py  claude_code.py  codex.py  cursor.py  pi.py
src/packwright/checker/: __init__.py  scoring.py
src/packwright/core/: __init__.py  adapter_layout.py  adopt.py  automation_projection.py  character_intake.py  emotion_engine_contract.py  errors.py  handoff.py  install.py  intake_contract.py  knowledge_contract.py  loader.py  (+12 more)
templates/: character_intake.example.yaml
templates/atlas-work/: mechanism.yaml
tests/: test_mvp_chain.py  test_pi_adapter.py  test_release_audits.py  test_runtime_automations.py
(+14 files in other folders)
